--- a/Week12 - Intro tools - react/exemples/spa/my-first-app/style.css
+++ b/Week12 - Intro tools - react/exemples/spa/my-first-app/style.css
@@ -3,27 +3,53 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
 }
 
-a {
+header a {
   font-weight: 500;
-  color: #646cff;
+  color: #201b1b;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+header a:hover {
+  color: #736a6a;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#app {
+  width: 100%;
+  height: 100%;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  background-color: rgb(229, 22, 22);
+  width: 100%;
+}
+
+header h1 {
+  display: flex;
+  font-size: 20px;
+  color: white;
+  flex-shrink: 0;
+}
+
+header nav {
+  width: 100%;
+}
+
+header ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+header ul li {
+  margin-right: 10px;
+  font-size: 20px;
 }
