--- a/Week14 - Workshop React/my-shop-app/src/pages/HomePage/HomePage.css
+++ b/Week14 - Workshop React/my-shop-app/src/pages/HomePage/HomePage.css
@@ -1,5 +1,17 @@
-.home-title {
-    font-size: 1.5em;
-    text-align: center;
-    color: blueviolet;
-  }
+.product-list {
+  display: flex;
+  gap:20px;
+  margin:20px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.product {
+  width: 250px;
+}
+.product img{
+  width: 100%;
+}
+
+.product h1{
+  font-size: 16px;
+}
